Changing around the data in each table

--- a/eoc.html
+++ b/eoc.html
@@ -126,7 +126,7 @@
 				<table id="ore"  class="tablesorter">
 					<thead>
 						<th>Ore</th>
-						<th>Volume</th>
+						<th>Volume (m<sup>3</sup>)</th>
 						<th>Price</th>
 						<th>Price/Volume</th>
 						<th>Input</th>
