Updating efficiency and station tax columns in refining table

--- a/eoc.html
+++ b/eoc.html
@@ -94,6 +94,8 @@
 							<th>Left Over</th>
 							<th>Amount (per batch)</th>
 							<th>Quantity</th>
+							<th>Lost (efficiency)</th>
+							<th>Lost (station tax)</th>
 							<th>Price</th>
 							<th>Total</th>
 						</tr>
